--- a/package.json
+++ b/package.json
@@ -11,18 +11,25 @@
   "dependencies": {
     "@maniac-tech/react-native-expo-read-sms": "^9.0.2-alpha",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.8.6",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.7.0",
+    "cd": "^0.3.3",
     "expo": "~54.0.25",
     "expo-document-picker": "~14.0.7",
+    "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.13",
     "expo-status-bar": "~3.0.8",
+    "fin-app": "file:",
     "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gifted-charts": "^1.4.67",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1"
   },
   "private": true,
   "devDependencies": {
