--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@maniac-tech/react-native-expo-read-sms": "^9.0.2-alpha",
@@ -17,6 +18,7 @@
     "@react-navigation/native-stack": "^7.7.0",
     "cd": "^0.3.3",
     "expo": "~54.0.25",
+    "expo-dev-client": "~6.0.18",
     "expo-document-picker": "~14.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
@@ -26,6 +28,7 @@
     "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-get-sms-android": "^2.1.0",
     "react-native-gifted-charts": "^1.4.67",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -33,6 +36,7 @@
   },
   "private": true,
   "devDependencies": {
-    "babel-preset-expo": "^54.0.7"
+    "babel-preset-expo": "^54.0.7",
+    "patch-package": "^8.0.1"
   }
 }
